--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,13 +24,9 @@ theme:
         - toc.integrate
         - header.autohide
 
-extra_css:
-- css/material.css
-- css/mkdocstrings.css
-
-
 nav:
   - Home: index.md
+  - Pipeline description: Pipeline/pipeline.md
   - Example-driven guide: ExampleDrivenGuide/cmd_guide.md
   - Parameters:
     - Command-line parameters: Parameters/cmd_parameters.md
@@ -71,6 +67,18 @@ markdown_extensions:
  - pymdownx.tilde
  - pymdownx.details
  - pymdownx.superfences
+ - pymdownx.arithmatex:
+     generic: true
+
+extra_javascript:
+  - javascripts/katex.js
+  - https://unpkg.com/katex@0/dist/katex.min.js
+  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
+
+extra_css:
+ - css/material.css
+ - css/mkdocstrings.css
+ - https://unpkg.com/katex@0/dist/katex.min.css
 
 plugins:
  - search
