--- a/lovis4u/lovis4u_data/standard.cfg
+++ b/lovis4u/lovis4u_data/standard.cfg
@@ -8,16 +8,19 @@ genbank_id_alternative_source = ID,id,PROTEIN_ID
 genbank_description_source = annotations:organism
 genbank_CDS_name_source = product
 genbank_CDS_category_source = function
+clustering_h_value = 0.35
+one_cluster = False
 CDS_is_variable_cutoff = 0.25
+CDF_is_conserved_cutoff = 0.75
 keep_predefined_groups = True
 keep_predefined_colours = True
 
 ;[mmseqs parameters]
 mmseqs_cluster_mode = 0
 mmseqs_cov_mode = 0
-mmseqs_min_seq_id = 0.35
+mmseqs_min_seq_id = 0.25
 mmseqs_c = 0.8
-mmseqs_s = 6.5
+mmseqs_s = 7
 
 ;[Paths]
 palette = {internal}/palette.txt
@@ -57,7 +60,7 @@ groups_fill_colour_seaborn_palette = husl
 groups_fill_colour_seaborn_desat = 0.95
 feature_labels_to_ignore = hypothetical protein, unknown protein
 feature_group_types_to_show_label = variable,labeled
-feature_group_types_to_show_label_on_first_occurrence = conserved
+feature_group_types_to_show_label_on_first_occurrence = conserved,intermediate
 show_all_feature_labels = False
 category_colour_seaborn_palette = hls
 category_colour_seaborn_desat = 0.9
@@ -65,7 +68,7 @@ category_colour_seaborn_desat = 0.9
 ;[Locus track advanced settings]
 feature_height = 0.3
 feature_stroke_width = 0.3
-feature_arrow_length = 0.6
+feature_arrow_length = 0.4
 feature_bottom_gap = 0.04
 locus_label_size = 0.7
 locus_label_colour = black
