--- a/lovis4u/lovis4u_data/standard.cfg
+++ b/lovis4u/lovis4u_data/standard.cfg
@@ -1,10 +1,11 @@
 ;[Data Processing]
 default_transl_table = 11
+use_filename_as_contig_id = False
 gff_description_source = description
 gff_CDS_name_source = product
 gff_CDS_category_source = function
 genbank_id_source = protein_id
-genbank_id_alternative_source = ID,id,PROTEIN_ID
+genbank_id_alternative_source = ID,id,PROTEIN_ID,locus_tag
 genbank_description_source = annotations:organism
 genbank_CDS_name_source = product
 genbank_CDS_category_source = function
@@ -14,6 +15,7 @@ CDS_is_variable_cutoff = 0.25
 CDF_is_conserved_cutoff = 0.75
 keep_predefined_groups = True
 keep_predefined_colours = True
+cluster_all_proteins = True
 
 ;[mmseqs parameters]
 mmseqs_cluster_mode = 0
@@ -36,20 +38,24 @@ font_mono = {internal}/fonts/RobotoMono-Regular.ttf
 ;[Output]
 verbose = True
 debug = False
+parsing_debug = False
 output_dir = lovis4u_{current_date}
 
 ;[General figure parameters]
-margin = 0.1
-gap = 0.1
-mm_per_nt = auto
+margin = 1
+gap = 2
+mm_per_nt = 0.05
 figure_width = None
 
 ;[Locus track primary settings]
 locus_label_style = full
-locus_label_description_font_face = italic
-locus_label_id_font_face = regular
-draw_individual_x_axis = True
-draw_middle_line = False
+locus_label_position = bottom
+locus_label_description_font_face_left = italic
+locus_label_description_font_face_bottom = light_italic
+locus_label_id_font_face_left = regular
+locus_label_id_font_face_bottom = light
+draw_individual_x_axis = False
+draw_middle_line = True
 feature_default_fill_colour = fancy_grey
 feature_default_stroke_colour = grey
 set_feature_stroke_colour_based_on_fill_colour = True
@@ -66,30 +72,31 @@ category_colour_seaborn_palette = hls
 category_colour_seaborn_desat = 0.9
 
 ;[Locus track advanced settings]
-feature_height = 0.3
-feature_stroke_width = 0.3
-feature_arrow_length = 0.4
-feature_bottom_gap = 0.04
-locus_label_size = 0.7
+feature_height = 3.15
+feature_stroke_width = 0.300
+feature_arrow_length = 0.3
+feature_bottom_gap = 0.350
+locus_label_size = 0.8
+bottom_locus_label_font_size = 6
 locus_label_colour = black
 locus_label_colour_alpha = 1
-gap_after_locus_label = 0.1
-x_axis_ticks_height = 0.07
-x_axis_ticks_labels_height = 0.1
+gap_after_locus_label = 1
+x_axis_ticks_height = 1
+x_axis_ticks_labels_font_size = 5.5
 x_axis_ticks_labels_font_face = light
-x_axis_line_width = 0.3
+x_axis_line_width = 0.500
 x_axis_line_colour = black
 x_axis_line_colour_alpha = 1
 category_annotation_alpha = 1
-category_annotation_line_width = 0.07
+category_annotation_line_width = 0.85
 groups_fill_colours_pastel_factor = 0.4
 feature_stroke_colour_alpha = 1
 feature_fill_colour_alpha = 0.7
 groups_stroke_colours_alpha = 1
-feature_label_size = 0.5
-feature_label_gap = 0.5
+feature_label_font_size = 6.5
+feature_label_gap = 0.7
 feature_label_font_face = regular
-gap_between_regions = 0.5
+gap_between_regions = 9
 
 ;[Homology_track]
 homology_fill_colour = lightgrey
@@ -99,17 +106,18 @@ homology_stroke_colour = grey
 homology_stroke_colour_alpha = 0
 
 ;[Scale line track]
-scale_line_relative_size = 0.3
-scale_line_width = 0.3
-scale_line_tics_height = 0.05
+draw_scale_line_track = False
+scale_line_relative_size = 0.40
+scale_line_width = 0.450
+scale_line_tics_height = 15
 scale_line_colour = black
 scale_line_colour_alpha = 1
-scale_line_label_height = 0.13
+scale_line_label_font_size = 6
 scale_line_label_font_face = regular
 
 ;[Category colour legend]
-colour_legend_label_size = 0.15
-colour_legend_line_height = 0.07
+colour_legend_label_font_size = 6.5
+colour_legend_line_width = 0.85
 colour_legend_font_face = regular
 colour_legend_label_colour = black
 colour_legend_label_colour_alpha = 1
