--- a/lovis4u/lovis4u_data/A4p2.cfg
+++ b/lovis4u/lovis4u_data/A4p2.cfg
@@ -1,14 +1,19 @@
 ;[Data Processing]
 default_transl_table = 11
 use_filename_as_contig_id = False
+add_locus_id_prefix = False
 gff_description_source = description
 gff_CDS_name_source = product
 gff_CDS_category_source = function
+gff_noncoding_name_source = product
+gff_noncoding_name_alternative_source = trna,rna,locus_tag
 genbank_id_source = protein_id
 genbank_id_alternative_source = ID,id,PROTEIN_ID,locus_tag
 genbank_description_source = annotations:organism
 genbank_CDS_name_source = product
 genbank_CDS_category_source = function
+genbank_noncoding_name_source = product
+genbank_noncoding_name_alternative_source = trna,rna,locus_tag
 clustering_h_value = 0.4
 one_cluster = False
 CDS_is_variable_cutoff = 0.25
@@ -38,6 +43,7 @@ font_mono = {internal}/fonts/RobotoMono-Regular.ttf
 ;[Output]
 verbose = True
 debug = False
+parsing_debug = False
 output_dir = lovis4u_{current_date}
 
 ;[General figure parameters]
@@ -56,7 +62,8 @@ locus_label_id_font_face_bottom = light
 draw_individual_x_axis = False
 draw_middle_line = True
 feature_default_fill_colour = fancy_grey
-feature_default_stroke_colour = grey
+feature_default_stroke_colour = dark_grey
+noncoding_feature_default_stroke_colour = black
 set_feature_stroke_colour_based_on_fill_colour = True
 feature_stroke_colour_relative_lightness = 0.4
 feature_group_types_to_set_colour = variable,labeled
