--- a/lovis4u/lovis4u_data/A4p1.cfg
+++ b/lovis4u/lovis4u_data/A4p1.cfg
@@ -32,8 +32,8 @@ mmseqs_s = 7
 ;[pyhmmer parameters and additional annotation]
 run_hmmscan_search = False
 hmmscan_evalue = 1e-3
-hmmscan_query_coverage_cutoff = 0.8
-hmmscan_hmm_coverage_cutoff = 0.7
+hmmscan_query_coverage_cutoff = 0.7
+hmmscan_hmm_coverage_cutoff = 0.65
 update_protein_name_with_target_name = True
 update_category_with_database_name = True
 show_label_on_first_occurrence_for_query_proteins = True
@@ -51,6 +51,7 @@ hmm_config_names = hmm_defence_df,hmm_defence_padloc,hmm_virulence,hmm_anti_defe
 database_names = defence (DefenseFinder),defence (PADLOC),virulence,anti-defence,AMR
 defence_models = both
 only_mine_hmms = False
+hmm_models = False
 
 ;[Paths]
 palette = {internal}/palette.txt
