--- a/lovis4u/lovis4u_data/A4p2.cfg
+++ b/lovis4u/lovis4u_data/A4p2.cfg
@@ -51,6 +51,7 @@ hmm_config_names = hmm_defence_df,hmm_defence_padloc,hmm_virulence,hmm_anti_defe
 database_names = defence (DefenseFinder),defence (PADLOC),virulence,anti-defence,AMR
 defence_models = both
 only_mine_hmms = False
+hmm_models = False
 
 ;[Paths]
 palette = {internal}/palette.txt
@@ -127,7 +128,7 @@ groups_stroke_colours_alpha = 1
 feature_label_font_size = 6.5
 feature_label_gap = 0.7
 feature_label_font_face = regular
-gap_between_regions = 6
+gap_between_regions = 10
 
 ;[Homology_track]
 homology_fill_colour = lightgrey
