--- a/lovis4u/lovis4u_data/standard.cfg
+++ b/lovis4u/lovis4u_data/standard.cfg
@@ -51,6 +51,7 @@ hmm_config_names = hmm_defence_df,hmm_defence_padloc,hmm_virulence,hmm_anti_defe
 database_names = defence (DefenseFinder),defence (PADLOC),virulence,anti-defence,AMR
 defence_models = both
 only_mine_hmms = False
+hmm_models = False
 
 ;[Paths]
 palette = {internal}/palette.txt
