--- a/lovis4u/lovis4u_data/A4p2.cfg
+++ b/lovis4u/lovis4u_data/A4p2.cfg
@@ -96,7 +96,7 @@ groups_fill_colour_seaborn_palette = husl
 groups_fill_colour_seaborn_desat = 0.95
 feature_labels_to_ignore = hypothetical protein, unknown protein
 feature_group_types_to_show_label = variable,labeled
-feature_group_types_to_show_label_on_first_occurrence = conserved,intermediate
+feature_group_types_to_show_label_on_first_occurrence = conserved,intermediate,undefined
 show_all_feature_labels = False
 show_noncoding_labels = False
 show_first_noncoding_label = False
