--- a/lovis4u/lovis4u_data/A4p1.cfg
+++ b/lovis4u/lovis4u_data/A4p1.cfg
@@ -77,31 +77,70 @@ mm_per_nt = auto
 figure_width = 90
 
 ;[Locus track primary settings]
-locus_label_style = id
-locus_label_position = bottom
+locus_label_style = full
+locus_label_position = auto
 locus_label_description_font_face_left = italic
 locus_label_description_font_face_bottom = light_italic
+locus_label_description_font_face_top_left = light_italic
+locus_label_description_font_face_top_center = italic
 locus_label_id_font_face_left = regular
 locus_label_id_font_face_bottom = light
-draw_individual_x_axis = False
+locus_label_id_font_face_top_left = light
+locus_label_id_font_face_top_center = regular
+locus_label_font_size_bottom = 6
+locus_label_font_size_top_left = 9
+locus_label_font_size_top_center = 8
+ruler_label_font_size = 7.5
+ruler_label_font_face = regular
+ruler_line_width = 0.7
+draw_individual_x_axis = auto
 draw_middle_line = True
 feature_default_fill_colour = fancy_grey
 feature_default_stroke_colour = dark_grey
 noncoding_feature_default_stroke_colour = black
 set_feature_stroke_colour_based_on_fill_colour = True
-feature_stroke_colour_relative_lightness = 0.4
+feature_stroke_colour_relative_lightness = 0.15
 feature_group_types_to_set_colour = variable,labeled
 groups_fill_colour_palette_lib = seaborn
 groups_fill_colour_seaborn_palette = husl
 groups_fill_colour_seaborn_desat = 0.95
 feature_labels_to_ignore = hypothetical protein, unknown protein
 feature_group_types_to_show_label = variable,labeled
-feature_group_types_to_show_label_on_first_occurrence = conserved,intermediate
+feature_group_types_to_show_label_on_first_occurrence = conserved,intermediate,undefined
 show_all_feature_labels = False
 show_noncoding_labels = False
 show_first_noncoding_label = False
 category_colour_seaborn_palette = hls
 category_colour_seaborn_desat = 0.9
+
+;[Property track]
+property_window_length = 250
+property_track_height = 10
+property_track_stroke_line_width = 0.4
+min_bin_width_property = 1e-7
+property_gc_positive_colour = orange
+property_gc_negative_colour = yellow
+property_gc_skew_positive_colour = green
+property_gc_skew_negative_colour = purple
+property_track_colour_alpha = 0.65
+property_label_font_size = 7
+property_label_font_face = regular
+property_axis_font_size = 6.5
+property_axis_font_face = regular
+property_track_middle_line_width = 0.35
+
+;[BedGraph coverage track]
+bedgraph_track_height = 8
+bedgraph_profile_style = line
+min_bin_width = 0.5
+normalise_aggregation = True
+bedgraph_track_bottom_line_width = 0.4
+bedgraph_track_colours = dark_pink,purple1,gold,blue1,bright_pink,green,blue
+bedgraph_track_colour_alpha = 0.5
+bedgraph_label_font_size = 7
+bedgraph_label_font_face = regular
+bedgraph_axis_font_size = 6.5
+bedgraph_axis_font_face = regular
 
 ;[Locus track advanced settings]
 feature_height = 3
@@ -109,7 +148,6 @@ feature_stroke_width = 0.300
 feature_arrow_length = 0.3
 feature_bottom_gap = 0.350
 locus_label_size = 0.8
-bottom_locus_label_font_size = 6
 locus_label_colour = black
 locus_label_colour_alpha = 1
 gap_after_locus_label = 0.6
@@ -153,3 +191,6 @@ colour_legend_line_width = 0.85
 colour_legend_font_face = regular
 colour_legend_label_colour = black
 colour_legend_label_colour_alpha = 1
+
+;[Other]
+windows = False
