--- a/lovis4u/lovis4u_data/A4L.cfg
+++ b/lovis4u/lovis4u_data/A4L.cfg
@@ -56,6 +56,7 @@ hmm_models = False
 ;[Paths]
 palette = {internal}/palette.txt
 mmseqs_binary = {internal}/bin/mmseqs_mac/bin/mmseqs
+bigWigToBedGraph_binary = {internal}/bin/ucsc_mac/bigWigToBedGraph
 category_colours = {internal}/category_colours.tsv
 font_italic = {internal}/fonts/Lato-Italic.ttf
 font_light = {internal}/fonts/Lato-Light.ttf
