--- a/lovis4u/lovis4u_data/A4p2.cfg
+++ b/lovis4u/lovis4u_data/A4p2.cfg
@@ -1,7 +1,7 @@
 ;[Data Processing]
 default_transl_table = 11
 use_filename_as_contig_id = False
-add_locus_id_prefix = False
+add_locus_id_prefix = True
 gff_description_source = description
 gff_CDS_name_source = product
 gff_CDS_category_source = function
